// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`audit Snapshot Tests Audit App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-audit-main": {
    "Description": "(SO0320-audit) Modern Data Architecture Accelerator. Version 1.0.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-audit-main:bucket:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-audit-main:bucket:name",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-audit-main:kms:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-audit-main:kms:id",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuesampleorgdomain1generatedroletestroleidC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/sample-org/domain1/generated-role/test-role/id",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "RoleResRead0": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "arn": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":iam::",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":role/Admin",
                ],
              ],
            },
            "refId": "Read-0",
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-audit-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "audit",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-audit-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-audit) Modern Data Architecture Accelerator. Version 1.0.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "CatalogId": {
            "Ref": "AWS::AccountId",
          },
          "DatabaseName": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
          "TableInput": {
            "Description": "CloudTrail Glue table",
            "Name": "cloudtrail_audit",
            "Parameters": {
              "EXTERNAL": "TRUE",
              "has_encrypted_data": true,
              "projection.account.type": "enum",
              "projection.account.values": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ",111111111111",
                  ],
                ],
              },
              "projection.enabled": "true",
              "projection.region.type": "enum",
              "projection.region.values": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "AWS::Region",
                    },
                    ",us-east-1",
                  ],
                ],
              },
              "projection.timestamp.format": "yyyy/MM/dd",
              "projection.timestamp.interval": "1",
              "projection.timestamp.interval.unit": "DAYS",
              "projection.timestamp.range": "2021/01/01,NOW",
              "projection.timestamp.type": "date",
              "storage.location.template": {
                "Fn::Join": [
                  "",
                  [
                    "s3://",
                    {
                      "Ref": "REPLACED-CFN-LOGICAL-ID",
                    },
                    "/AWSLogs/\${account}/CloudTrail/\${region}/\${timestamp}",
                  ],
                ],
              },
            },
            "PartitionKeys": [
              {
                "Name": "timestamp",
                "Type": "string",
              },
              {
                "Name": "region",
                "Type": "string",
              },
              {
                "Name": "account",
                "Type": "string",
              },
            ],
            "StorageDescriptor": {
              "Columns": [
                {
                  "Name": "eventversion",
                  "Type": "string",
                },
                {
                  "Name": "useridentity",
                  "Type": "struct<type:string,principalid:string,arn:string,accountid:string,invokedby:string,accesskeyid:string,userName:string,sessioncontext:struct<attributes:struct<mfaauthenticated:string,creationdate:string>,sessionissuer:struct<type:string,principalId:string,arn:string,accountId:string,userName:string>>>",
                },
                {
                  "Name": "eventtime",
                  "Type": "string",
                },
                {
                  "Name": "eventsource",
                  "Type": "string",
                },
                {
                  "Name": "eventname",
                  "Type": "string",
                },
                {
                  "Name": "awsregion",
                  "Type": "string",
                },
                {
                  "Name": "sourceipaddress",
                  "Type": "string",
                },
                {
                  "Name": "useragent",
                  "Type": "string",
                },
                {
                  "Name": "errorcode",
                  "Type": "string",
                },
                {
                  "Name": "errormessage",
                  "Type": "string",
                },
                {
                  "Name": "requestparameters",
                  "Type": "string",
                },
                {
                  "Name": "responseelements",
                  "Type": "string",
                },
                {
                  "Name": "additionaleventdata",
                  "Type": "string",
                },
                {
                  "Name": "requestid",
                  "Type": "string",
                },
                {
                  "Name": "eventid",
                  "Type": "string",
                },
                {
                  "Name": "resources",
                  "Type": "array<struct<ARN:string,accountId:string,type:string>>",
                },
                {
                  "Name": "eventtype",
                  "Type": "string",
                },
                {
                  "Name": "apiversion",
                  "Type": "string",
                },
                {
                  "Name": "readonly",
                  "Type": "string",
                },
                {
                  "Name": "recipientaccountid",
                  "Type": "string",
                },
                {
                  "Name": "serviceeventdetails",
                  "Type": "string",
                },
                {
                  "Name": "sharedeventid",
                  "Type": "string",
                },
                {
                  "Name": "vpcendpointid",
                  "Type": "string",
                },
              ],
              "Compressed": false,
              "InputFormat": "com.amazon.emr.cloudtrail.CloudTrailInputFormat",
              "Location": {
                "Fn::Join": [
                  "",
                  [
                    "s3://",
                    {
                      "Ref": "REPLACED-CFN-LOGICAL-ID",
                    },
                    "/AWSLogs",
                  ],
                ],
              },
              "OutputFormat": "org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat",
              "SerdeInfo": {
                "SerializationLibrary": "com.amazon.emr.hive.serde.CloudTrailSerde",
              },
              "StoredAsSubDirectories": false,
            },
            "TableType": "EXTERNAL_TABLE",
          },
        },
        "Type": "AWS::Glue::Table",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "BucketEncryption": {
            "ServerSideEncryptionConfiguration": [
              {
                "BucketKeyEnabled": true,
                "ServerSideEncryptionByDefault": {
                  "KMSMasterKeyID": {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                  "SSEAlgorithm": "aws:kms",
                },
              },
            ],
          },
          "BucketName": "test-org-test-env-test-domain-test-audit-main",
          "PublicAccessBlockConfiguration": {
            "BlockPublicAcls": true,
            "BlockPublicPolicy": true,
            "IgnorePublicAcls": true,
            "RestrictPublicBuckets": true,
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "audit",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-audit-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "VersioningConfiguration": {
            "Status": "Enabled",
          },
        },
        "Type": "AWS::S3::Bucket",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
              },
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "Bucket": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "s3:*",
                "Condition": {
                  "Bool": {
                    "aws:SecureTransport": "false",
                  },
                },
                "Effect": "Deny",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": [
                  {
                    "Fn::GetAtt": [
                      "REPLACED-CFN-LOGICAL-ID",
                      "Arn",
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        {
                          "Fn::GetAtt": [
                            "REPLACED-CFN-LOGICAL-ID",
                            "Arn",
                          ],
                        },
                        "/*",
                      ],
                    ],
                  },
                ],
              },
              {
                "Action": "s3:GetBucketAcl",
                "Effect": "Allow",
                "Principal": {
                  "Service": "cloudtrail.amazonaws.com",
                },
                "Resource": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "Sid": "REPLACED-CFN-LOGICAL-ID",
              },
              {
                "Action": "s3:GetObject*",
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResRead0",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Ref": "SsmParameterValuesampleorgdomain1generatedroletestroleidC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                            ":*",
                          ],
                        ],
                      },
                      "testing_id:*",
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
                "Sid": "/_Read",
              },
              {
                "Action": "s3:PutObject",
                "Condition": {
                  "StringEquals": {
                    "s3:x-amz-acl": "bucket-owner-full-control",
                  },
                  "StringLike": {
                    "aws:SourceArn": {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":cloudtrail:*:",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":trail/*",
                        ],
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "cloudtrail.amazonaws.com",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/AWSLogs/",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      "/*",
                    ],
                  ],
                },
                "Sid": {
                  "Fn::Join": [
                    "",
                    [
                      "AWSCloudTrailWrite20150319-",
                      {
                        "Ref": "AWS::AccountId",
                      },
                    ],
                  ],
                },
              },
              {
                "Action": "s3:PutObject",
                "Condition": {
                  "StringEquals": {
                    "aws:SourceAccount": {
                      "Ref": "AWS::AccountId",
                    },
                    "s3:x-amz-acl": "bucket-owner-full-control",
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "s3.amazonaws.com",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/inventory/*",
                    ],
                  ],
                },
                "Sid": "AllowS3Inventory",
              },
              {
                "Action": "s3:PutObject",
                "Condition": {
                  "StringEquals": {
                    "s3:x-amz-acl": "bucket-owner-full-control",
                  },
                  "StringLike": {
                    "aws:SourceArn": {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":cloudtrail:*:111111111111:trail/*",
                        ],
                      ],
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "cloudtrail.amazonaws.com",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/AWSLogs/111111111111/*",
                    ],
                  ],
                },
                "Sid": "AWSCloudTrailWrite20150319-111111111111",
              },
              {
                "Action": "s3:PutObject",
                "Condition": {
                  "StringEquals": {
                    "aws:SourceAccount": "111111111111",
                    "s3:x-amz-acl": "bucket-owner-full-control",
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "s3.amazonaws.com",
                },
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/inventory/*",
                    ],
                  ],
                },
                "Sid": "AllowS3Inventory",
              },
            ],
            "Version": "2012-10-17",
          },
        },
        "Type": "AWS::S3::BucketPolicy",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-audit-main/bucket/arn",
          "Tags": {
            "mdaa_cdk_app": "audit",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-audit-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-S1",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "HIPAA.Security-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "PCI.DSS.321-S3BucketLoggingEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
              },
              {
                "id": "HIPAA.Security-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
              {
                "id": "PCI.DSS.321-S3BucketReplicationEnabled",
                "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-audit-main/bucket/name",
          "Tags": {
            "mdaa_cdk_app": "audit",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-audit-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "CatalogId": {
            "Ref": "AWS::AccountId",
          },
          "DatabaseInput": {
            "Name": "test_org_test_env_test_domain_test_audit_main",
          },
        },
        "Type": "AWS::Glue::Database",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DeletionPolicy": "Retain",
        "Properties": {
          "EnableKeyRotation": true,
          "Enabled": true,
          "KeyPolicy": {
            "Statement": [
              {
                "Action": "kms:*",
                "Effect": "Allow",
                "Principal": {
                  "AWS": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":iam::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":root",
                      ],
                    ],
                  },
                },
                "Resource": "*",
              },
              {
                "Action": [
                  "kms:Decrypt",
                  "kms:Encrypt",
                  "kms:ReEncryptFrom",
                  "kms:ReEncryptTo",
                  "kms:GenerateDataKey",
                  "kms:GenerateDataKeyWithoutPlaintext",
                  "kms:GenerateDataKeyPair",
                  "kms:GenerateDataKeyPairWithoutPlaintext",
                ],
                "Condition": {
                  "StringLike": {
                    "aws:userId": [
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Fn::GetAtt": [
                                "RoleResRead0",
                                "id",
                              ],
                            },
                            ":*",
                          ],
                        ],
                      },
                      {
                        "Fn::Join": [
                          "",
                          [
                            {
                              "Ref": "SsmParameterValuesampleorgdomain1generatedroletestroleidC96584B6F00A464EAD1953AFF4B05118Parameter",
                            },
                            ":*",
                          ],
                        ],
                      },
                      "testing_id:*",
                    ],
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "AWS": "*",
                },
                "Resource": "*",
                "Sid": "test-org-test-env-test-domain-test-audit-main-usage-stmt",
              },
              {
                "Action": [
                  "kms:Encrypt",
                  "kms:ReEncryptFrom",
                  "kms:ReEncryptTo",
                  "kms:GenerateDataKey",
                  "kms:GenerateDataKeyWithoutPlaintext",
                  "kms:GenerateDataKeyPair",
                  "kms:GenerateDataKeyPairWithoutPlaintext",
                ],
                "Effect": "Allow",
                "Principal": {
                  "Service": [
                    "cloudtrail.amazonaws.com",
                    "s3.amazonaws.com",
                  ],
                },
                "Resource": "*",
              },
            ],
            "Version": "2012-10-17",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "audit",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-audit-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::KMS::Key",
        "UpdateReplacePolicy": "Retain",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AliasName": "alias/test-org-test-env-test-domain-test-audit-main",
          "TargetKeyId": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::KMS::Alias",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-audit-main/kms/arn",
          "Tags": {
            "mdaa_cdk_app": "audit",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-audit-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-audit-main/kms/id",
          "Tags": {
            "mdaa_cdk_app": "audit",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-audit-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`audit Snapshot Tests Audit Stack Snapshot Test 1`] = `
{
  "Description": "(SO0320-audit) Modern Data Architecture Accelerator. Version 1.0.0",
  "Outputs": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-audit-main:bucket:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "Arn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-audit-main:bucket:name",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-audit-main:kms:arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "REPLACED-CFN-LOGICAL-ID",
          "Arn",
        ],
      },
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Export": {
        "Name": "test-org:test-domain:test-audit-main:kms:id",
      },
      "Value": {
        "Ref": "REPLACED-CFN-LOGICAL-ID",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuesampleorgdomain1generatedroletestroleidC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/sample-org/domain1/generated-role/test-role/id",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "RoleResRead0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ServiceToken": {
          "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "roleRef": {
          "arn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/Admin",
              ],
            ],
          },
          "refId": "Read-0",
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/test-domain/test-audit-main/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "audit",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-audit-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-audit) Modern Data Architecture Accelerator. Version 1.0.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "CatalogId": {
          "Ref": "AWS::AccountId",
        },
        "DatabaseName": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
        "TableInput": {
          "Description": "CloudTrail Glue table",
          "Name": "cloudtrail_audit",
          "Parameters": {
            "EXTERNAL": "TRUE",
            "has_encrypted_data": true,
            "projection.account.type": "enum",
            "projection.account.values": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ",111111111111",
                ],
              ],
            },
            "projection.enabled": "true",
            "projection.region.type": "enum",
            "projection.region.values": {
              "Fn::Join": [
                "",
                [
                  {
                    "Ref": "AWS::Region",
                  },
                  ",us-east-1",
                ],
              ],
            },
            "projection.timestamp.format": "yyyy/MM/dd",
            "projection.timestamp.interval": "1",
            "projection.timestamp.interval.unit": "DAYS",
            "projection.timestamp.range": "2021/01/01,NOW",
            "projection.timestamp.type": "date",
            "storage.location.template": {
              "Fn::Join": [
                "",
                [
                  "s3://",
                  {
                    "Ref": "REPLACED-CFN-LOGICAL-ID",
                  },
                  "/AWSLogs/\${account}/CloudTrail/\${region}/\${timestamp}",
                ],
              ],
            },
          },
          "PartitionKeys": [
            {
              "Name": "timestamp",
              "Type": "string",
            },
            {
              "Name": "region",
              "Type": "string",
            },
            {
              "Name": "account",
              "Type": "string",
            },
          ],
          "StorageDescriptor": {
            "Columns": [
              {
                "Name": "eventversion",
                "Type": "string",
              },
              {
                "Name": "useridentity",
                "Type": "struct<type:string,principalid:string,arn:string,accountid:string,invokedby:string,accesskeyid:string,userName:string,sessioncontext:struct<attributes:struct<mfaauthenticated:string,creationdate:string>,sessionissuer:struct<type:string,principalId:string,arn:string,accountId:string,userName:string>>>",
              },
              {
                "Name": "eventtime",
                "Type": "string",
              },
              {
                "Name": "eventsource",
                "Type": "string",
              },
              {
                "Name": "eventname",
                "Type": "string",
              },
              {
                "Name": "awsregion",
                "Type": "string",
              },
              {
                "Name": "sourceipaddress",
                "Type": "string",
              },
              {
                "Name": "useragent",
                "Type": "string",
              },
              {
                "Name": "errorcode",
                "Type": "string",
              },
              {
                "Name": "errormessage",
                "Type": "string",
              },
              {
                "Name": "requestparameters",
                "Type": "string",
              },
              {
                "Name": "responseelements",
                "Type": "string",
              },
              {
                "Name": "additionaleventdata",
                "Type": "string",
              },
              {
                "Name": "requestid",
                "Type": "string",
              },
              {
                "Name": "eventid",
                "Type": "string",
              },
              {
                "Name": "resources",
                "Type": "array<struct<ARN:string,accountId:string,type:string>>",
              },
              {
                "Name": "eventtype",
                "Type": "string",
              },
              {
                "Name": "apiversion",
                "Type": "string",
              },
              {
                "Name": "readonly",
                "Type": "string",
              },
              {
                "Name": "recipientaccountid",
                "Type": "string",
              },
              {
                "Name": "serviceeventdetails",
                "Type": "string",
              },
              {
                "Name": "sharedeventid",
                "Type": "string",
              },
              {
                "Name": "vpcendpointid",
                "Type": "string",
              },
            ],
            "Compressed": false,
            "InputFormat": "com.amazon.emr.cloudtrail.CloudTrailInputFormat",
            "Location": {
              "Fn::Join": [
                "",
                [
                  "s3://",
                  {
                    "Ref": "REPLACED-CFN-LOGICAL-ID",
                  },
                  "/AWSLogs",
                ],
              ],
            },
            "OutputFormat": "org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat",
            "SerdeInfo": {
              "SerializationLibrary": "com.amazon.emr.hive.serde.CloudTrailSerde",
            },
            "StoredAsSubDirectories": false,
          },
          "TableType": "EXTERNAL_TABLE",
        },
      },
      "Type": "AWS::Glue::Table",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "BucketKeyEnabled": true,
              "ServerSideEncryptionByDefault": {
                "KMSMasterKeyID": {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                "SSEAlgorithm": "aws:kms",
              },
            },
          ],
        },
        "BucketName": "test-org-test-env-test-domain-test-audit-main",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "audit",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-audit-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/s3-constructs/lib/index.ts:145:25] Server access logs do not support KMS on targets. MDAA uses CloudTrail data events instead.",
            },
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "Bucket": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "REPLACED-CFN-LOGICAL-ID",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "REPLACED-CFN-LOGICAL-ID",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetBucketAcl",
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudtrail.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "REPLACED-CFN-LOGICAL-ID",
                  "Arn",
                ],
              },
              "Sid": "REPLACED-CFN-LOGICAL-ID",
            },
            {
              "Action": "s3:GetObject*",
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResRead0",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Ref": "SsmParameterValuesampleorgdomain1generatedroletestroleidC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                          ":*",
                        ],
                      ],
                    },
                    "testing_id:*",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "/_Read",
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "s3:x-amz-acl": "bucket-owner-full-control",
                },
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudtrail:*:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":trail/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudtrail.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/AWSLogs/",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": {
                "Fn::Join": [
                  "",
                  [
                    "AWSCloudTrailWrite20150319-",
                    {
                      "Ref": "AWS::AccountId",
                    },
                  ],
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "s3:x-amz-acl": "bucket-owner-full-control",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "s3.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/inventory/*",
                  ],
                ],
              },
              "Sid": "AllowS3Inventory",
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "s3:x-amz-acl": "bucket-owner-full-control",
                },
                "StringLike": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudtrail:*:111111111111:trail/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudtrail.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/AWSLogs/111111111111/*",
                  ],
                ],
              },
              "Sid": "AWSCloudTrailWrite20150319-111111111111",
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": "111111111111",
                  "s3:x-amz-acl": "bucket-owner-full-control",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "s3.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "REPLACED-CFN-LOGICAL-ID",
                        "Arn",
                      ],
                    },
                    "/inventory/*",
                  ],
                ],
              },
              "Sid": "AllowS3Inventory",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-audit-main/bucket/arn",
        "Tags": {
          "mdaa_cdk_app": "audit",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-audit-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-S1",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target of cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "NIST.800.53.R5-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "HIPAA.Security-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "PCI.DSS.321-S3BucketLoggingEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] 1. Audit bucket is target for data lake cloudtrail audit logs. 2. Server access logs do not support KMS on targets.",
            },
            {
              "id": "HIPAA.Security-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
            {
              "id": "PCI.DSS.321-S3BucketReplicationEnabled",
              "reason": "[MDAA:@aws-mdaa/governance/audit-l3-construct/lib/audit-l3-construct.ts:142:25] MDAA Data Lake does not use bucket replication.",
            },
          ],
        },
      },
      "Properties": {
        "Name": "/test-org/test-domain/test-audit-main/bucket/name",
        "Tags": {
          "mdaa_cdk_app": "audit",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-audit-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "CatalogId": {
          "Ref": "AWS::AccountId",
        },
        "DatabaseInput": {
          "Name": "test_org_test_env_test_domain_test_audit_main",
        },
      },
      "Type": "AWS::Glue::Database",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "EnableKeyRotation": true,
        "Enabled": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
              ],
              "Condition": {
                "StringLike": {
                  "aws:userId": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "RoleResRead0",
                              "id",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Ref": "SsmParameterValuesampleorgdomain1generatedroletestroleidC96584B6F00A464EAD1953AFF4B05118Parameter",
                          },
                          ":*",
                        ],
                      ],
                    },
                    "testing_id:*",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "test-org-test-env-test-domain-test-audit-main-usage-stmt",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "cloudtrail.amazonaws.com",
                  "s3.amazonaws.com",
                ],
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "mdaa_cdk_app",
            "Value": "audit",
          },
          {
            "Key": "mdaa_domain",
            "Value": "test-domain",
          },
          {
            "Key": "mdaa_env",
            "Value": "test-env",
          },
          {
            "Key": "mdaa_module_name",
            "Value": "test-audit-main",
          },
          {
            "Key": "mdaa_org",
            "Value": "test-org",
          },
        ],
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "AliasName": "alias/test-org-test-env-test-domain-test-audit-main",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-audit-main/kms/arn",
        "Tags": {
          "mdaa_cdk_app": "audit",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-audit-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Name": "/test-org/test-domain/test-audit-main/kms/id",
        "Tags": {
          "mdaa_cdk_app": "audit",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-audit-main",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
